--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h3 id="timestamp">Updating currencies...</p>
+  <h3 id="timestamp">Updating currencies...</h3>
 
   <ul id="list">
     <script>genCurrencyList()</script>
