Change typeface and layout

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
   <h3 id="timestamp">Updating currencies...</h3>
 
-  <ul id="list">
-    <script>genCurrencyList()</script>
-  </ul>
+  <ul style="font-family: monospace" id="list">...</ul>
 
 </body>
 </html>
